footer added to lead breadcrumbs back to main site

--- a/whfnp-gallery/assets/css/main.css
+++ b/whfnp-gallery/assets/css/main.css
@@ -15,7 +15,7 @@ html, body {
     padding: 0;
     background-color: #000000;
     font-family: sans-serif;
-   -webkit-font-smoothing: antialiased; 
+   -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -36,7 +36,7 @@ header {
     width: 100%;
     height: 114px;
    -moz-box-sizing: border-box;
-    box-sizing: border-box;   
+    box-sizing: border-box;
     z-index: 2;
 
     -webkit-transition: all .2s ease-out;
@@ -74,7 +74,7 @@ header div.meta-left {
     padding-left: 20px;
     padding-top: 20px;
    -moz-box-sizing: border-box;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 header div.meta-right {
@@ -83,7 +83,7 @@ header div.meta-right {
     padding-right: 6px;
     padding-top: 6px;
    -moz-box-sizing: border-box;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 header p.title {
@@ -138,6 +138,15 @@ header ul.gallery-meta li {
     float: right;
     font-size: 14px;
     line-height: 40px;
+}
+
+footer {
+  color: #fff;
+}
+
+footer a {
+  color: #2AB7CA;
+  text-decoration: none;
 }
 
 .scrolled header.is-fixed {
@@ -288,7 +297,7 @@ header ul.gallery-meta li {
     padding: 114px 0px 0px 0px;
     width: 100%;
    -moz-box-sizing: border-box;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 div.thumbnails {
@@ -310,19 +319,19 @@ div.thumbnail {
    -moz-transition: -moz-box-shadow .03s ease-in;
    -ms-transition: box-shadow .03s ease-in;
    -o-transition: box-shadow .03s ease-in;
-    transition: box-shadow .03s ease-in; 
+    transition: box-shadow .03s ease-in;
 }
 
 div.thumbnail:hover {
-   -moz-box-shadow: inset 0 0 100px rgba(0, 0, 0, .4);  
-   -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .4);   
+   -moz-box-shadow: inset 0 0 100px rgba(0, 0, 0, .4);
+   -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .4);
     box-shadow: inset 0 0 100px rgba(0, 0, 0, .4);
 
    -webkit-transition: all .03s ease-out;
    -moz-transition: all .03s ease-out;
    -ms-transition: all .03s ease-out;
    -o-transition: all .03s ease-out;
-    transition: all .03s ease-out;  
+    transition: all .03s ease-out;
 }
 
 .row-spacing-sm div.thumbnail {
@@ -457,7 +466,7 @@ div.thumbnail img {
     height: 100%;
     padding: 45px 0px 100px 0px;
    -moz-box-sizing: border-box;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 #loupeContainer div.side-navigation div.hotspot {
@@ -465,7 +474,7 @@ div.thumbnail img {
     width: 25%;
     height: 100%;
 
-   -webkit-user-select: none;   
+   -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
@@ -589,11 +598,11 @@ div.thumbnail img {
     width: 45px;
     height: 45px;
     cursor: pointer;
-   -webkit-user-select: none;   
+   -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
-    user-select: none; 
+    user-select: none;
 }
 
 #buttonPrev.disabled {
@@ -614,7 +623,7 @@ div.thumbnail img {
     width: 45px;
     height: 45px;
     cursor: pointer;
-   -webkit-user-select: none;   
+   -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
@@ -666,7 +675,7 @@ div.thumbnail img {
         padding: 45px 45px 150px 45px;
         font-size: 13px;
     }
-    
+
     #loupeContainer div.info-container {
         height: 150px;
     }
