--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="p:domain_verify" content="b42540c314a1248a231bba403bde5b2f"/>
     <meta name="description" content="Personal website of Tanya Powell | Software Engineer">
     <meta name="author" content="Tanya Powell">
-    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="scss/main.css">
     <link rel="shortcut icon" href="favicon.ico"/>
     <!-- Analytics -->
