--- a/_includes/community.html
+++ b/_includes/community.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-      <a href="#"><img class="project-img" src="img/Final_Logo.png"></a>
+      <a href="http://www.womenhackfornonprofits.com/"><img class="project-img" src="img/Final_Logo.png"></a>
       <p style="text-align: center">Board Member and member of the Volunteer Outreach team</p>
       <div class="col-md-2"></div>
     </div>
