--- a/_includes/community.html
+++ b/_includes/community.html
@@ -1,22 +1,50 @@
 <!-- Community Work -->
-<section id="voluntary" class="container-fluid vertical-center bg-vol">
-  <h1>Community Work</h1>
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <a href="http://www.womenhackfornonprofits.com/"><img class="project-img" src="img/Final_Logo.png"></a>
-      <p style="text-align: center">Board Member and member of the Volunteer Outreach team</p>
-      <div class="col-md-2"></div>
+<section id="community" class="container-fluid vertical-center bg-vol">
+    <h1>Community Work</h1>
+    <div class="row row-flex row-flex-wrap">
+        <div class=" col-md-6 col-sm-12 col-xs-12 community-group">
+            <div class="panel panel-default flex-col">
+                <div class="panel-heading"><h3>Women Hack For Non-Profits</h3></div>
+                <div class="panel-body flex-grow">
+                    <a href="http://www.womenhackfornonprofits.com/"><img class="vol-img" src="img/Final_Logo.png"></a>
+                </div>
+                <div class="panel-footer">
+                    <p style="text-align: center">Board Member and member of the Volunteer Outreach team</p>
+                </div>
+            </div>
+        </div>
+        <div class=" col-md-6 col-sm-12 col-xs-12 community-group">
+            <div class="panel panel-default flex-col">
+                <div class="panel-heading"><h3>EmpowerHack</h3></div>
+                <div class="panel-body flex-grow">
+                    <a href="http://empowerhack.io/"><img class="empower" src="img/empower.png"></a>
+                </div>
+                <div class="panel-footer">
+                    <p style="text-align: center">Software Development</p>
+                </div>
+            </div>
+        </div>
+        <div class=" col-md-6 col-sm-12 col-xs-12 community-group">
+            <div class="panel panel-default flex-col">
+                <div class="panel-heading"><h3>Chayn</h3></div>
+                <div class="panel-body flex-grow">
+                    <a href="http://chayn.co/"><img class="vol-img" src="http://chayn.co/wp-content/uploads/2016/06/chayn-bulb-smallest.png"></a>
+                </div>
+                <div class="panel-footer">
+                    <p style="text-align: center">Software Development</p>
+                </div>
+            </div>
+        </div>
+        <div class=" col-md-6 col-sm-12 col-xs-12 community-group">
+            <div class="panel panel-default flex-col">
+                <div class="panel-heading"><h3>Acorn Aspirations</h3></div>
+                <div class="panel-body flex-grow">
+                    <a href="http://acornaspirations.co.uk/"><img class="vol-img" src="http://acornaspirations.co.uk/wp-content/uploads/2014/10/acornaspirations-logo-e1414195515927.png"></a>
+                </div>
+                <div class="panel-footer">
+                    <p style="text-align: center">Software Development Mentor</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <a href="http://acornaspirations.co.uk/"><img class="project-img" src="http://acornaspirations.co.uk/wp-content/uploads/2014/10/acornaspirations-logo-e1414195515927.png"></a>
-        <p></p>
-        <p>Software Development Mentor</p>
-      </div>
-      <div class="col-md-6">
-        <a href="http://empowerhack.io/"><img class="empower" src="img/empower.png"></a>
-        <p>Software Development</p>
-      </div>
-    </div>
-  </section>
+</section>
