--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -8,3 +8,8 @@ $white: rgba(255, 255, 255, 1);
 $aqua-spring: rgba(230, 232, 230, 1);
 $light-grey: rgba(206, 208, 206, 1);
 $dark-grey: rgba(25, 25, 25, 1);
+$cyan: #60daaa;
+$yellow: #fbca67;
+$orange: #f45e61;
+$purple: #6477b9;
+$blue: #0eb7da;
