--- a/src/styles/_components/_footer.scss
+++ b/src/styles/_components/_footer.scss
@@ -1,6 +1,7 @@
 @import "../_partials/_variables", "../_partials/_mixins";
 
 footer {
+  font-family: $font-headings;
   background-color: $dark-grey;
   bottom: 0;
   color: $light-grey;
@@ -18,7 +19,6 @@ footer {
 
   a {
     color: $light-grey;
-    font-family: $font-headings;
 
     &:hover {
       @include border-bottom-radius(0);
@@ -35,6 +35,6 @@ footer {
   -moz-columns: 2;
 }
 
-.sitemap-title {
-  padding-left: 5em;
+.footer-social:first-letter {
+  text-transform: uppercase;
 }
