--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,14 @@ body > .page-wrap {
   min-height: 100%;
 }
 
+.justified {
+  text-align: justify;
+}
+
+.center {
+  text-align: center;
+}
+
 div.container-fluid {
   padding: 0;
 }
