--- a/src/styles/_partials/pages/_about.scss
+++ b/src/styles/_partials/pages/_about.scss
@@ -10,13 +10,17 @@
   background-size: cover;
 }
 
-.img-circle {
+img-thumbail {
+  background-color: $orange;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid $orange;
 }
 
 .dynamic-words {
   color: $orange;
+}
+
+.about-dynamic-header {
+  padding: 15px;
 }
