--- a/src/styles/_partials/pages/_about.scss
+++ b/src/styles/_partials/pages/_about.scss
@@ -10,11 +10,9 @@
   background-size: cover;
 }
 
-img-thumbail {
-  background-color: $orange;
+img.img-thumbail {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 .dynamic-words {
@@ -23,4 +21,13 @@ img-thumbail {
 
 .about-dynamic-header {
   padding: 15px;
+}
+
+.center-social {
+  // left: 50%;
+  // margin-right: -50%;
+
+  > i {
+    color: $orange;
+  }
 }
