--- a/src/styles/_partials/pages/_pages.scss
+++ b/src/styles/_partials/pages/_pages.scss
@@ -1,10 +1,10 @@
 @import "./../_variables", "./_about", "./_contact", "./community",
-        "./_skills", "./_speaking", "./photography","./_portfolio";
+        "./_skills", "./_talks", "./photography","./_portfolio";
 
 #about-background, #community-background,
 #contact-background, #skills-background,
 #speaking-background, #photography-background,
-#portfolio-background {
+#portfolio-background, #current-projects-background, #completed-projects-background {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,11 +13,11 @@
 .about, .community,
 .contact, .skills,
 .speaking, .photography,
-.portfolio {
+.portfolio, .current, .completed {
   padding-bottom: 3em;
   padding-top: 3em;
-  width: 65%;
-  @include breakpoint(large) { width: 60%; }
+  width: 75%;
+  @include breakpoint(large) { width: 70%; }
   @include breakpoint(medium) { width: 80%; }
   @include breakpoint(small) { width: 95%; }
 }
