--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,13 @@ html, body, .page-wrap, #root {
   height: 100%;
 }
 
-.page-header {
+.heading {
+  font-family: $font-headings;
+  padding-top: 1em;
+  text-align: center;
+}
+
+.page-header{
   font-family: $font-headings;
   text-align: center;
   padding-bottom: 3em;
@@ -19,6 +25,10 @@ body {
 body > .page-wrap {
   height: auto;
   min-height: 100%;
+}
+
+p {
+  font-size: 18px;
 }
 
 .justified {
